<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_degrade"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/inputUserID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

    </ImageView>

    <EditText
        android:id="@+id/inputUserID"
        android:background="@drawable/background_textbox"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="12dp" android:paddingStart="12dp"
        android:paddingRight="12dp" android:paddingEnd="12dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:hint="@string/text_user_email"
        android:textColorHint="@color/myGray"
        android:textColor="@android:color/white"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/inputUserPW"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo" />

    <EditText
        android:id="@+id/inputUserPW"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/background_textbox"
        android:ems="10"
        android:hint="@string/text_password"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingLeft="12dp"
        android:paddingTop="5dp"
        android:paddingEnd="12dp"
        android:paddingRight="12dp"
        android:paddingBottom="5dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/myGray"
        app:layout_constraintBottom_toTopOf="@+id/textButtonRestorePw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputUserID" />

    <TextView
        android:id="@+id/textButtonRestorePw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/forgot_password_text"
        android:textAlignment="center"
        android:textColor="@color/blueLink"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputUserPW" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:background="@drawable/button_background"
        android:text="@string/text_login"
        android:textColor="@color/myGray"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textButtonCreateAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textButtonRestorePw" />

    <TextView
        android:id="@+id/textButtonCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_register"
        android:textAlignment="center"
        android:textColor="@color/blueLink"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <ProgressBar
        android:id="@+id/progressLoginBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textButtonCreateAccount" />

</androidx.constraintlayout.widget.ConstraintLayout>