<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_degrade"
    tools:context=".activity.RegisterActivity">


    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/editRegUserName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

    </ImageView>

    <EditText
        android:id="@+id/editRegUserName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/background_textbox"
        android:ems="10"
        android:hint="@string/text_user_name"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingLeft="12dp"
        android:paddingTop="5dp"
        android:paddingEnd="12dp"
        android:paddingRight="12dp"
        android:paddingBottom="5dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/myGray"
        app:layout_constraintBottom_toTopOf="@+id/editRegUserID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo" />

    <EditText
        android:id="@+id/editRegUserPW"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/background_textbox"
        android:ems="10"
        android:hint="@string/text_password"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingLeft="12dp"
        android:paddingTop="5dp"
        android:paddingEnd="12dp"
        android:paddingRight="12dp"
        android:paddingBottom="5dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/myGray"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editRegUserID" />

    <EditText
        android:id="@+id/editRegUserID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/background_textbox"
        android:ems="10"
        android:hint="@string/text_user_email"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingLeft="12dp"
        android:paddingTop="5dp"
        android:paddingEnd="12dp"
        android:paddingRight="12dp"
        android:paddingBottom="5dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/myGray"
        app:layout_constraintBottom_toTopOf="@+id/editRegUserPW"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editRegUserName" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:background="@drawable/button_background"
        android:text="@string/insta_register_text"
        android:textColor="@color/myGray"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/progressRegBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editRegUserPW" />

    <ProgressBar
        android:id="@+id/progressRegBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>