<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/midGray"
    tools:context=".fragment.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/userTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/midGray"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.23" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileFragmentCircleImageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/padrao"
            app:civ_border_color="#FFffff"
            app:civ_border_width="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="@id/userTabLayout"
            app:layout_constraintTop_toTopOf="@id/userTabLayout" />


        <TextView
            android:id="@+id/textViewPosts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:text="@string/text_posts"
            app:layout_constraintEnd_toStartOf="@+id/textPostsCount"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textPostsCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:padding="4dp"
            android:text="0"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/textViewPosts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textViewPosts" />

        <TextView
            android:id="@+id/textViewFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:text="@string/text_followers"
            app:layout_constraintEnd_toStartOf="@+id/textFollowersCount"
            app:layout_constraintTop_toBottomOf="@+id/textViewFollowing" />
        <TextView
            android:id="@+id/textFollowersCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:padding="4dp"
            android:text="0"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/textViewFollowers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textViewFollowers" />

        <TextView
            android:id="@+id/textViewFollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:text="@string/text_following"
            app:layout_constraintEnd_toStartOf="@+id/textFollowingCount"
            app:layout_constraintTop_toBottomOf="@+id/textViewPosts" />

        <TextView
            android:id="@+id/textFollowingCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:padding="4dp"
            android:text="0"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/textViewFollowing"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textViewFollowing" />



        <TextView
            android:id="@+id/textDisplayQuote"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:text='"Quote"'
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/buttonProfileAction"
            app:layout_constraintEnd_toStartOf="@+id/textViewFollowing"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textDisplayEmail"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textDisplayEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="user@email.com"
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@+id/textDisplayQuote"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonProfileAction"
            android:layout_width="100dp"
            android:layout_height="21dp"
            android:background="@drawable/background_profile_button"
            android:gravity="center"
            android:text="@string/text_edit_profile"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textViewFollowers"
            app:layout_constraintEnd_toStartOf="@+id/textViewFollowers"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/textViewFollowers" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/includeDivisor"
        layout="@layout/divisor"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userTabLayout" />


    <ProgressBar
        android:id="@+id/profileProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewNoPosts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_user_has_no_posts"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridView
        android:id="@+id/profileGridView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="2dp"
        android:numColumns="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/includeDivisor" />


</androidx.constraintlayout.widget.ConstraintLayout>