<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myProfileLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MyProfileActivity">

    <LinearLayout
        android:id="@+id/movLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/background_text_buttom_custom"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/buttonOpenCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/color_animation_test"
            android:padding="6dp"
            app:srcCompat="@drawable/ic_camera_alt_black_24dp" />

        <ImageButton
            android:id="@+id/buttonOpenGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/color_animation_test"
            android:padding="6dp"
            app:srcCompat="@drawable/ic_image_black_24dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="128dp"
            android:orientation="vertical"
            android:padding="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/editActivityProfileCircleImageView"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_gravity="center"
                android:src="@drawable/padrao"
                app:civ_border_color="#FFffff"
                app:civ_border_width="5dp" />

            <TextView
                android:id="@+id/buttonChangeImage"
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="Change Image"
                android:textAllCaps="false"
                android:textColor="@color/blueLink"
                android:textStyle="bold"></TextView>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_user_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_person_black_24dp"
                    android:drawableLeft="@drawable/ic_person_black_24dp"
                    android:drawablePadding="6dp"
                    android:drawableTint="@android:color/darker_gray" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editUserEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:drawableStart="@drawable/ic_email_black_24dp"
                    android:drawableLeft="@drawable/ic_email_black_24dp"
                    android:drawablePadding="6dp"
                    android:drawableTint="@android:color/darker_gray"
                    android:focusable="false"
                    android:hint="@string/text_user_email" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_quote">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editUserQuote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_format_quote_black_24dp"
                    android:drawableLeft="@drawable/ic_format_quote_black_24dp"
                    android:drawableEnd="@drawable/ic_format_quote_black_24dp"
                    android:drawableRight="@drawable/ic_format_quote_black_24dp"
                    android:drawablePadding="6dp"
                    android:drawableTint="@android:color/darker_gray" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonSaveChanges"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_profile_button"
                android:gravity="center"
                android:padding="4dp"
                android:text="Save Changes"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>